connect to Cloudinary. get and post succesfully using Post Man

--- a/MyBlog.Web/appsettings.json
+++ b/MyBlog.Web/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BloggieDbConnectionString": "Data Source=macbookM5\\SQLEXPRESS;Initial Catalog=BloggieDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+
+  "Cloudinary": {
+    "CloudName": "ddvgrzrie",
+    "ApiKey": "333314161181714",
+    "ApiSecret": "0QyFH10nw-Xy9y9oEWx2kATMAG0"
+
   }
 }
+
