--- a/MyBlog.Web/appsettings.json
+++ b/MyBlog.Web/appsettings.json
@@ -7,7 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BloggieDbConnectionString": "Data Source=macbookM5\\SQLEXPRESS;Initial Catalog=BloggieDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    // SmartASP.NET Db
+    //"BloggieDbConnectionString": "Data Source=SQL5113.site4now.net;Initial Catalog=db_aa73dc_heval1st;User Id=db_aa73dc_heval1st_admin;Password=liebeistHier2029;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    //"BloggieAuthDbConnectionString": "Data Source=SQL5113.site4now.net;Initial Catalog=BloggieAuthDb;User Id=db_aa73dc_heval1st_admin;Password=liebeistHier2029;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
+    // Local Db
+    "BloggieDbConnectionString": "Data Source=macbookM5\\SQLEXPRESS;Initial Catalog=BloggieDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "BloggieAuthDbConnectionString": "Data Source=macbookM5\\SQLEXPRESS;Initial Catalog=BloggieAuthDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
   },
 
   // Cloudinary settings
